# cli-agent-orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOUDSCAPE_UX_GUIDE.md  CODEBASE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  FOLLOWUPS.md  GEMINI.md  README.md  SECURITY.md  TESTING.md  VSCODE_EXTENSION.md  WEBVIEW_SUMMARY.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer-ci.json  devcontainer.json  post-create.sh  test-ci.sh
.github/: PULL_REQUEST_TEMPLATE.md
cao_mcp_apps/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
cao_pwa/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  vite.config.ts
cdk/: package.json
docs/: PORT-NOTES-fork-net-new-2026-07-04.md  RELEASING.md  TENETS.md  agent-context-files-and-version-control.md  agent-profile.md  agui.md  antigravity-cli.md  api.md  auth.md  awslabs-delta.md  cedar-migration.md  claude-code.md  codespaces.md  codex-cli.md  configuration.md  control-planes.md  copilot-cli.md  cursor-cli.md  devcontainer-feature.md  event-driven-architecture.md  external-tool-integration.md  flows.md  gemini-cli.md  generative-ui-implementation-2026-07-04.md  herdr.md  hermes.md  kimi-cli.md  (+26 more)
examples/plugins/cao-discord/: README.md  env.template  pyproject.toml
examples/plugins/cao-discord/cao_discord/: plugin.py
examples/plugins/cao-discord/tests/: test_plugin.py
zellij/: .gitattributes  Cargo.toml  README.md  zellaude.wasm
zellij/layouts/: cao.kdl
zellij/src/: lib.rs
(+794 files in other folders)
