[package]
name = "zellaude"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CAO v2.5 Zellij status-bar plugin (Phase 2)."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
